cluster-policies/hubble.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-hosts-allow"
  labels:
    k8s-app: hubble
    tier: cluster
spec:
  nodeSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: '4244'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s-app: hubble-ui
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
        - ports:
            - port: "8081"
              protocol: TCP

---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-pods-allow"
  labels:
    k8s-app: hubble
    tier: cluster
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
      k8s:io.kubernetes.pod.namespace: kube-system
  egress:
    - toEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
          - port: '4244'
            protocol: TCP

---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-peer-allow"
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
      k8s:io.kubernetes.pod.namespace: kube-system
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-relay-clusterip-allow"
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
      k8s:io.kubernetes.pod.namespace: kube-system
  egress:
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
